# meds_reader

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  .readthedocs.yaml  README.md  build_helper.sh  pyproject.toml  setup.py
.github/workflows/: python-build.yml
docs/: requirements.txt
docs/source/: README.md  api_reference.rst  conf.py  index.rst  supported.rst
native/: .bazelrc  BUILD  MODULE.bazel  WORKSPACE  backupbazelrc  binary_version.hh  create_database.cc  create_database.hh  dtype.hh  fast_shared_ptr.hh  fast_shared_ptr_test.cc  filter_database.cc  filter_database.hh  meds_reader.cc  meds_reader_convert.cc  meds_reader_filter.cc  mmap_file.hh  pdqsort.h  perfect_hash.hh  property_reader.cc  property_reader.hh  pyutils.hh  simple_test.cc
native/patches/: BUILD  ThirdpartyToolchain.cmake.patch
src/meds_reader/: __init__.py  __init__.pyi  transform.py  transform.pyi
tests/: api_test.py
tools/: verify.py
