[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "meds_reader"
dynamic = ["version"]
description = "A Pythonic interface for MEDS datasets"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python=">=3.9"
dependencies = [
  "pyarrow >= 9",
  "meds>=0.2.0,<0.3",
  "numpy>=1.16,<2",
]

[tool.setuptools_scm]

[project.urls]
Homepage = "https://github.com/EthanSteinberg/meds_reader"
Documentation = "https://meds-reader.readthedocs.io/en/latest/"
Repository = "https://github.com/EthanSteinberg/meds_reader"
Tracker = "https://github.com/EthanSteinberg/meds_reader/issues"

[project.scripts]
meds_reader_convert = "meds_reader:meds_reader_convert"
