[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "meds_reader"
dynamic = ["version"]
description = "A Pythonic interface for MEDS datasets"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python=">=3.9"
dependencies = [
  "pyarrow >= 9",
  "meds == 0.3.2",
  "numpy>=1.16,<2",
  "pandas>=2.2",
]

[tool.setuptools_scm]

[project.urls]
Homepage = "https://github.com/som-shahlab/meds_reader"
Documentation = "https://meds-reader.readthedocs.io/en/latest/"
Repository = "https://github.com/som-shahlab/meds_reader"
Tracker = "https://github.com/som-shahlab/meds_reader/issues"

[project.scripts]
meds_reader_convert = "meds_reader:meds_reader_convert"
meds_reader_verify = "meds_reader:meds_reader_verify"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.black]
line_length = 120
target_version = ['py310']
